# foo-bar-baz

./: .pre-commit-config.yaml  pyproject.toml
cmd/: check-format.sh  format.sh  set-up.sh
