[project]
name = "foo-bar-baz"
version = "0.1.0"
description = ""
authors = [
    {name = "Aiden Pham",email = "quangpham.245@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
